@@ -3,6 +3,7 @@
 
    Copyright (C) 1998, Sandeep Dutta
    Copyright (C) 2009-2019, Philipp Klaus Krause pkk@spth.de
+   Copyright (C) 2025, Gabriele Gorla
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -58,6 +59,12 @@ typedef int errno_t;
 #define __SDCC_BROKEN_STRING_FUNCTIONS
 #endif
 
+#if defined(__SDCC_mos6502) && !defined(__SDCC_STACK_AUTO)
+#define _NEAR __zp
+#else
+#define _NEAR
+#endif
+
 /* The function prototypes are ordered as in the ISO C11 standard. */
 
 /* Todo: fix the "restrict" stuff for C99 compliance. */
@@ -73,7 +80,7 @@ extern void *memmove (void *dest, const void *src, size_t n);
 #if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka) || defined(__SDCC_tlcs90) || defined (__SDCC_ez80_z80) || defined (__SDCC_z80n) || defined(__SDCC_r800)
 extern char *strcpy (char * /*restrict*/ dest, const char * /*restrict*/ src) __preserves_regs(iyl, iyh);
 #else
-extern char *strcpy (char * /*restrict*/ dest, const char * /*restrict*/ src);
+extern char *strcpy (char * /*restrict*/ dest, const char * _NEAR /*restrict*/ src);
 #endif
 extern char *strncpy (char * /*restrict*/ dest, const char * /*restrict*/ src, size_t n);
 
@@ -86,8 +93,8 @@ extern char *strdup (const char *s);
 extern char *strndup (const char *s, size_t n);
 
 /* Comparison functions: */
-extern int memcmp (const void *s1, const void *s2, size_t n);
-extern int strcmp (const char *s1, const char *s2);
+extern int memcmp (const void *s1, const void * _NEAR s2, _NEAR size_t n);
+extern int strcmp (const char *s1, const char * _NEAR s2);
 #define strcoll(s1, s2) strcmp(s1, s2)
 /*int strcoll(const char *s1, const char *s2) {return strcmp(s1, s2);}*/
 extern int strncmp (const char *s1, const char *s2, size_t n);
@@ -96,14 +103,14 @@ extern size_t strxfrm (char *dest, const char *src, size_t n);
 /* Search functions: */
 extern void *memchr (const void *s, int c, size_t n);
 #ifdef __SDCC_BROKEN_STRING_FUNCTIONS
-extern char *strchr (const char *s, char c); /* c should be int according to standard. */
+extern char *strchr (const char *s, _NEAR char c); /* c should be int according to standard. */
 #else
 extern char *strchr (const char *s, int c);
 #endif
 extern size_t strcspn(const char *s, const char *reject);
 extern char *strpbrk(const char *s, const char *accept);
 #ifdef __SDCC_BROKEN_STRING_FUNCTIONS
-extern char *strrchr(const char *s, char c); /* c should be int according to standard. */
+extern char *strrchr(const char *s, _NEAR char c); /* c should be int according to standard. */
 #else
 extern char *strrchr(const char *s, int c);
 #endif
@@ -113,7 +120,7 @@ extern char *strtok (char * /* restrict*/ str, const char * /*restrict*/ delim);
 
 /* Miscanelleous functions: */
 #ifdef __SDCC_BROKEN_STRING_FUNCTIONS
-extern void *memset (void *s, unsigned char c, size_t n); /* c should be int according to standard. */
+extern void *memset (void *s, _NEAR unsigned char c, _NEAR size_t n); /* c should be int according to standard. */
 #else
 extern void *memset (void *s, int c, size_t n);
 #endif
@@ -141,7 +148,7 @@ extern void __xdata * memcpyx(void __xdata *, void __xdata *, int) __naked;
 #define strchr(s, c) __builtin_strchr(s, c)
 #define memset(dst, c, n) __builtin_memset(dst, c, n)
 #else
-extern void *__memcpy (void * /*restrict */ dest, const void * /*restrict*/ src, size_t n);
+extern void *__memcpy (void * /*restrict */ dest, const void * _NEAR /*restrict*/ src, _NEAR size_t n);
 #define memcpy(dst, src, n) __memcpy(dst, src, n)
 #endif
 
