@@ -1,3 +1,8 @@
+2025-04-20 Gabriele Gorla <gorlik@yahoo.com>
+
+  	* device/include/string.h:
+  	  Add intrinsic named address space to library functions implemented in asm.
+
 2025-04-17 Gabriele Gorla <gorlik@yahoo.com>
 
   	* src/mos6502/gen.c:
